--- a/week19/code&task/publish/publish-server/.vscode/launch.json
+++ b/week19/code&task/publish/publish-server/.vscode/launch.json
@@ -3,15 +3,15 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations":[
+    "configurations": [
         {
-            "type":"node",
-            "request":"launch",
-            "name":"Launch Program",
-            "skipFiles":[
+            "name": "Launch Program",
+            "program": "${workspaceFolder}/app.js",
+            "request": "launch",
+            "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program":"${workspaceFolder}/week07/code&task/toy-browser/client.js"
+            "type": "pwa-node"
         }
     ]
 }
