--- a/week20/code&task/publish/demo/package.json
+++ b/week20/code&task/publish/demo/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack",
     "dev": "webpack-dev-server --open",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ./src"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +17,13 @@
     "@babel/plugin-transform-react-jsx": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "eslint": "^7.7.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "eslint-plugin-react": "^7.20.6",
+    "chai": "^4.2.0"
   }
 }
